feat: Estrutura do Portfólio

--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portólio de Danilson Sanches</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
-<body>
-    <h1>Inicio do projeto</h1>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Danilson Jorge Tavares Sanches</h1>
+      <span>Futuro Web Developer</span>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Educação</a></li>
+        <li><a href="#">Projetos</a></li>
+        <li><a href="#">Contatos</a></li>
+      </ul>
+    </nav>
+    <main>
+      <section>
+        <h2>Sobre Mim</h2>
+      </section>
+      <section>
+        <h2>Formação</h2>
+      </section>
+      <section>
+        <h2>Projetos</h2>
+      </section>
+      <section>
+        <h2>Contatos</h2>
+      </section>
+    </main>
+    <footer>
+      <p>
+        &copy; 2025 Portfólio desenvolvido por Danilson Sanches para fins
+        educativos da Formação Frontend Javascript pela Upskill.
+      </p>
+    </footer>
     <script src="assets/js/scripts.js"></script>
-</body>
+  </body>
 </html>
