--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portólio de Danilson Sanches</title>
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/874e9efdc5.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -12,6 +16,9 @@
       <span>Futuro Web Developer</span>
     </header>
     <nav>
+      <button class="menu-toggle" aria-label="Abrir Menu">
+        <i class="fa-solid fa-bars"></i>
+      </button>
       <ul>
         <li><a href="#">Sobre</a></li>
         <li><a href="#">Educação</a></li>
