--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portólio de Danilson Sanches</title>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link
+      rel="shortcut icon"
+      href="assets/images/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="assets/css/global.css" />
+    <link rel="stylesheet" href="assets/css/mobile.first.css" />
+    <link rel="stylesheet" href="assets/css/tablet.pc.css" />
     <script
       src="https://kit.fontawesome.com/874e9efdc5.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
-    <header>
-      <h1>Danilson Jorge Tavares Sanches</h1>
+    <header class="header">
+      <h1>Danilson Sanches</h1>
       <span>Futuro Web Developer</span>
     </header>
     <nav>
@@ -20,14 +27,30 @@
         <i class="fa-solid fa-bars"></i>
       </button>
       <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Educação</a></li>
-        <li><a href="#">Projetos</a></li>
-        <li><a href="#">Contatos</a></li>
+        <li class="menu__item">
+          <a class="menu__link active" href="#sobre">
+            <span class="menu__text"> Sobre </span>
+          </a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#educacao">
+            <span class="menu__text"> Educação </span></a
+          >
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#projetos">
+            <span class="menu__text"> Projetos </span></a
+          >
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#contato">
+            <span class="menu__text"> Contactos </span></a
+          >
+        </li>
       </ul>
     </nav>
     <main>
-      <section>
+      <section id="#about">
         <h2>Sobre Mim</h2>
       </section>
       <section>
