fix: Corrigindo secções "sobre mim" e  "projetos"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <header class="header">
       <h1>Danilson Sanches</h1>
@@ -50,14 +51,16 @@
       </ul>
     </nav>
     <main>
-        <!-- Secção Sobre -->
+      <!-- Secção Sobre -->
       <section id="sobre" class="about">
         <div class="about__content">
-          <img
-            class="about__photo"
-            src="assets/images/avatar.webp"
-            alt="Foto de Perfil"
-          />
+          <figure>
+            <img
+              class="about__photo"
+              src="assets/images/avatar.webp"
+              alt="Foto de Perfil"
+            />
+          </figure>
           <div class="about__description">
             <h2>Sobre mim</h2>
             <p>
@@ -70,7 +73,6 @@
           </div>
         </div>
       </section>
-
 
       <!-- Secção Educação -->
       <section id="educacao">
@@ -92,11 +94,14 @@
         <h2>Projetos</h2>
         <div class="projects__container">
           <div class="projects__card">
-            <img
-              class="card__cover"
-              src="assets/images/projetos/netflix.webp"
-              alt="Interface da Netflix"
-            />
+            <figure>
+              <img
+                class="card__cover"
+                src="assets/images/projetos/netflix.webp"
+                alt="Interface da Netflix"
+              />
+            </figure>
+
             <div class="card__body">
               <h3 class="card__title">Clone da Netflix</h3>
               <p class="card__description">Desafio do projeto</p>
@@ -113,25 +118,31 @@
               </ul>
               <ul class="technologies__list">
                 <li class="technologies__item">
-                  <img
-                    class="technologies__logo"
-                    src="assets/images/technologies/html.webp"
-                    alt="Logo Html"
-                  />
+                  <figure>
+                    <img
+                      class="technologies__logo"
+                      src="assets/images/technologies/html.webp"
+                      alt="Logo Html"
+                    />
+                  </figure>
                 </li>
                 <li class="technologies__item">
-                  <img
-                    class="technologies__logo"
-                    src="assets/images/technologies/css.webp"
-                    alt="Logo CSS"
-                  />
+                  <figure>
+                    <img
+                      class="technologies__logo"
+                      src="assets/images/technologies/css.webp"
+                      alt="Logo CSS"
+                    />
+                  </figure>
                 </li>
                 <li class="technologies__item">
-                  <img
-                    class="technologies__logo"
-                    src="assets/images/technologies/js.webp"
-                    alt="Logo Javascript"
-                  />
+                  <figure>
+                    <img
+                      class="technologies__logo"
+                      src="assets/images/technologies/js.webp"
+                      alt="Logo Javascript"
+                    />
+                  </figure>
                 </li>
               </ul>
               <div class="card__buttons">
@@ -147,11 +158,13 @@
             </div>
           </div>
           <div class="projects__card card--reverse">
-            <img
-              class="card__cover"
-              src="assets/images/projetos/instagram.webp"
-              alt="Interface de Instagram"
-            />
+            <figure>
+              <img
+                class="card__cover"
+                src="assets/images/projetos/instagram.webp"
+                alt="Interface de Instagram"
+              />
+            </figure>
             <div class="card__body">
               <h3 class="card__title">Interface inicial de instragram</h3>
               <p class="card__description">Desafios do projeto</p>
@@ -164,18 +177,22 @@
               </ul>
               <ul class="technologies__list">
                 <li class="technologies__item">
-                  <img
-                    class="technologies__logo"
-                    src="assets/images/technologies/html.webp"
-                    alt="Logo Html"
-                  />
+                  <figure>
+                    <img
+                      class="technologies__logo"
+                      src="assets/images/technologies/html.webp"
+                      alt="Logo Html"
+                    />
+                  </figure>
                 </li>
                 <li class="technologies__item">
-                  <img
-                    class="technologies__logo"
-                    src="assets/images/technologies/css.webp"
-                    alt="Logo CSS"
-                  />
+                  <figure>
+                    <img
+                      class="technologies__logo"
+                      src="assets/images/technologies/css.webp"
+                      alt="Logo CSS"
+                    />
+                  </figure>
                 </li>
               </ul>
               <div class="card__buttons">
@@ -191,11 +208,14 @@
             </div>
           </div>
           <div class="projects__card">
-            <img
-              class="card__cover"
-              src="assets/images/projetos/parque-biologico.webp"
-              alt="Capa Games Store"
-            />
+            <figure>
+              <img
+                class="card__cover"
+                src="assets/images/projetos/parque-biologico.webp"
+                alt="Capa Games Store"
+              />
+            </figure>
+
             <div class="card__body">
               <h3 class="card__title">Parque Biologico</h3>
               <p class="card__description">Descrição</p>
@@ -211,18 +231,22 @@
               </ul>
               <ul class="technologies__list">
                 <li class="technologies__item">
-                  <img
-                    class="technologies__logo"
-                    src="assets/images/technologies/java.webp"
-                    alt="Logo Java"
-                  />
+                  <figure>
+                    <img
+                      class="technologies__logo"
+                      src="assets/images/technologies/java.webp"
+                      alt="Logo Java"
+                    />
+                  </figure>
                 </li>
                 <li class="technologies__item">
-                  <img
-                    class="technologies__logo"
-                    src="assets/images/technologies/javafx.webp"
-                    alt="Logo JavaFX"
-                  />
+                  <figure>
+                    <img
+                      class="technologies__logo"
+                      src="assets/images/technologies/javafx.webp"
+                      alt="Logo JavaFX"
+                    />
+                  </figure>
                 </li>
               </ul>
               <div class="card__buttons">
@@ -247,7 +271,7 @@
           </a>
         </div>
       </section>
-      
+
       <section>
         <h2>Contatos</h2>
       </section>
